Remove usage of Docker container for Java enclaves